# HireMind-AI

./: .env.example  .gitignore  README.md  app.py  main.py  pyproject.toml  requirements.txt
agents/: ats_agent.py  cover_letter_agent.py  resume_agent.py  skill_gap_agent.py
graph/: job_graph.py
tools/: mcp_tools.py
utils/: pdf_generator.py  pdf_parser.py
